# farm_stack_todo_app

./: .gitignore  README.md  main.py  pyproject.toml
backend/: pyproject.toml  requirements.txt
backend/src/: dal.py  server.py
frontend/: package-lock.json  package.json
frontend/src/: ListTodoLists.css  ListTodoLists.js  ToDoList.css  index.css
nginx/: nginx.conf
